third_party/move/move-compiler-v2/tests/checking/inlining/private_call_3.exp

Diagnostics:
error: friend function `0x42::m::friend_accessible` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m`)
   ┌─ tests/checking/inlining/private_call_3.move:12:31
   │
12 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o_nonfriend::foo`
   ·
81 │     m::friend_accessible();
   │     ---------------------- called here

error: friend function `0x42::m::friend_accessible` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m`)
   ┌─ tests/checking/inlining/private_call_3.move:12:31
   │
12 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o_nonfriend::inaccessible`
   ·
91 │     m::friend_accessible();
   │     ---------------------- called here

error: friend function `0x42::m::friend_accessible` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m`)
    ┌─ tests/checking/inlining/private_call_3.move:12:31
    │
 12 │     public(friend) inline fun friend_accessible(): u64 {
    │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o_nonfriend::friend_accessible`
    ·
101 │     m::friend_accessible();
    │     ---------------------- called here

error: friend function `0x42::m::bar` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m`)
   ┌─ tests/checking/inlining/private_call_3.move:16:24
   │
16 │     public(friend) fun bar(): u64 { 42 }
   │                        ^^^ called from inline function `0x42::o_nonfriend::foo`
   ·
83 │     m::bar();
   │     -------- called here

error: friend function `0x42::m::bar` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m`)
   ┌─ tests/checking/inlining/private_call_3.move:16:24
   │
16 │     public(friend) fun bar(): u64 { 42 }
   │                        ^^^ called from inline function `0x42::o_nonfriend::inaccessible`
   ·
93 │     m::bar();
   │     -------- called here

error: friend function `0x42::m::bar` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m`)
    ┌─ tests/checking/inlining/private_call_3.move:16:24
    │
 16 │     public(friend) fun bar(): u64 { 42 }
    │                        ^^^ called from inline function `0x42::o_nonfriend::friend_accessible`
    ·
103 │     m::bar();
    │     -------- called here

error: friend function `0x42::m_nonfriend::friend_accessible` cannot be called from `0x42::o` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:28:31
   │
28 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o::foo`
   ·
45 │     m_nonfriend::friend_accessible();
   │     -------------------------------- called here

error: friend function `0x42::m_nonfriend::friend_accessible` cannot be called from `0x42::o` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:28:31
   │
28 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o::inaccessible`
   ·
55 │     m_nonfriend::friend_accessible();
   │     -------------------------------- called here

error: friend function `0x42::m_nonfriend::friend_accessible` cannot be called from `0x42::o` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:28:31
   │
28 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o::friend_accessible`
   ·
65 │     m_nonfriend::friend_accessible();
   │     -------------------------------- called here

error: friend function `0x42::m_nonfriend::friend_accessible` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:28:31
   │
28 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o_nonfriend::foo`
   ·
82 │     m_nonfriend::friend_accessible();
   │     -------------------------------- called here

error: friend function `0x42::m_nonfriend::friend_accessible` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:28:31
   │
28 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o_nonfriend::inaccessible`
   ·
92 │     m_nonfriend::friend_accessible();
   │     -------------------------------- called here

error: friend function `0x42::m_nonfriend::friend_accessible` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m_nonfriend`)
    ┌─ tests/checking/inlining/private_call_3.move:28:31
    │
 28 │     public(friend) inline fun friend_accessible(): u64 {
    │                               ^^^^^^^^^^^^^^^^^ called from inline function `0x42::o_nonfriend::friend_accessible`
    ·
102 │     m_nonfriend::friend_accessible();
    │     -------------------------------- called here

error: friend function `0x42::m_nonfriend::bar` cannot be called from `0x42::o` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:32:24
   │
32 │     public(friend) fun bar(): u64 { 42 }
   │                        ^^^ called from inline function `0x42::o::foo`
   ·
47 │     m_nonfriend::bar()
   │     ------------------ called here

error: friend function `0x42::m_nonfriend::bar` cannot be called from `0x42::o` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:32:24
   │
32 │     public(friend) fun bar(): u64 { 42 }
   │                        ^^^ called from inline function `0x42::o::inaccessible`
   ·
57 │     m_nonfriend::bar()
   │     ------------------ called here

error: friend function `0x42::m_nonfriend::bar` cannot be called from `0x42::o` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:32:24
   │
32 │     public(friend) fun bar(): u64 { 42 }
   │                        ^^^ called from inline function `0x42::o::friend_accessible`
   ·
67 │     m_nonfriend::bar()
   │     ------------------ called here

error: friend function `0x42::m_nonfriend::bar` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:32:24
   │
32 │     public(friend) fun bar(): u64 { 42 }
   │                        ^^^ called from inline function `0x42::o_nonfriend::foo`
   ·
84 │     m_nonfriend::bar()
   │     ------------------ called here

error: friend function `0x42::m_nonfriend::bar` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m_nonfriend`)
   ┌─ tests/checking/inlining/private_call_3.move:32:24
   │
32 │     public(friend) fun bar(): u64 { 42 }
   │                        ^^^ called from inline function `0x42::o_nonfriend::inaccessible`
   ·
94 │     m_nonfriend::bar()
   │     ------------------ called here

error: friend function `0x42::m_nonfriend::bar` cannot be called from `0x42::o_nonfriend` (not a friend of `0x42::m_nonfriend`)
    ┌─ tests/checking/inlining/private_call_3.move:32:24
    │
 32 │     public(friend) fun bar(): u64 { 42 }
    │                        ^^^ called from inline function `0x42::o_nonfriend::friend_accessible`
    ·
104 │     m_nonfriend::bar()
    │     ------------------ called here

error: function `0x42::o::inaccessible` is private to module `0x42::o`
    ┌─ tests/checking/inlining/private_call_3.move:50:16
    │
 50 │     inline fun inaccessible(): u64 {
    │                ^^^^^^^^^^^^ called from function `0x42::n::test`
    ·
116 │     assert!(o::inaccessible() == 42, 1);
    │             ----------------- called here

error: function `0x42::o_nonfriend::inaccessible` is private to module `0x42::o_nonfriend`
    ┌─ tests/checking/inlining/private_call_3.move:87:16
    │
 87 │     inline fun inaccessible(): u64 {
    │                ^^^^^^^^^^^^ called from function `0x42::n::test2`
    ·
122 │     assert!(o_nonfriend::inaccessible() == 42, 1);
    │             --------------------------- called here

error: friend function `0x42::o_nonfriend::friend_accessible` cannot be called from `0x42::n` (not a friend of `0x42::o_nonfriend`)
    ┌─ tests/checking/inlining/private_call_3.move:97:31
    │
 97 │     public(friend) inline fun friend_accessible(): u64 {
    │                               ^^^^^^^^^^^^^^^^^ called from function `0x42::n::test2`
    ·
123 │     assert!(o_nonfriend::friend_accessible() == 42, 1);
    │             -------------------------------- called here
